subprojects {
    group 'com.kakaocorp.kino'
    version '1.0-SNAPSHOT'
    apply plugin: 'java'

    sourceCompatibility = 9

    repositories {
        mavenCentral()
        maven { url "http://repo.daumkakao.io/content/groups/kakao-talkserver-group" }
    }

    dependencies {
        testImplementation 'junit:junit:4.12'
        compile 'org.reflections:reflections:0.9.11'
    }

    test{
        jvmArgs '--illegal-access=deny'
    }
}


//buildscript {
//    repositories {
//        mavenCentral()
//    }
//}
//
//apply plugin: 'java'
//
//task runApplication(type: JavaExec) {
//    classpath = sourceSets.main.runtimeClasspath
//
//    main = 'com.jess.di.Application'
//}
//
//repositories {
//    mavenCentral()
//}
//
//dependencies {
//    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
//    implementation 'com.google.guava:guava:21.0'
//    testImplementation 'junit:junit:4.12'
//}
//
